# realworld-axum

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  postgres-dev.yaml
.github/workflows/: build-and-test.yml
migrations/: 20231223052230_init.sql  20240112183926_init.sql
migrations/2024-01-14-051013_schema/: down.sql  up.sql
migrations/2024-01-15-205108_test-data/: up.sql
src/: db.rs  error.rs  handlers.rs  jwt.rs  lib.rs  main.rs  models.rs  password.rs  schema.rs  users.rs  validation.rs
src/db/: profiles.rs  users.rs
src/handlers/: articles.rs  comments.rs  favorites.rs  profiles.rs  tags.rs  users.rs
src/models/: article.rs  article_tag.rs  comment.rs  favorite.rs  follow.rs  tag.rs  user.rs
src/repos/: error.rs  profiles.rs  users.rs
tests/: app.rs  common.rs  profiles.rs  users.rs
