[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.7.2", features = ["tracing", "macros"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
password-hash = { version = "0.5.0", features = ["getrandom", "std"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum-test = "14.2.2"
